--- a/CloudBoxService/CloudBoxService/CloudBoxService.csproj
+++ b/CloudBoxService/CloudBoxService/CloudBoxService.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Accounts\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
